<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_faq"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginLeft="@dimen/dp_5"
    android:layout_marginTop="@dimen/dp_5"
    android:layout_marginRight="@dimen/dp_5"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/ll_faqlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/poppinsregular"
                android:gravity="start"
                android:text="@string/labels"
                android:textColor="@color/appcolor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="end"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_gravity="start"
            android:gravity="start"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/poppinsregular"
                android:gravity="start"
                android:text="@string/quantity"
                android:textColor="@color/appcolor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="start"
                android:text=""
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="end"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:fontFamily="@font/poppinsregular"
                    android:gravity="end"
                    android:text="@string/typeoflabel"
                    android:textColor="@color/appcolor"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_createdat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular"
                    android:gravity="end"
                    android:text="tag"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/poppinsregular"
                android:gravity="end"
                android:text="@string/distributed_to"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_distributed_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="end"
                android:text="tag"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_5"
                android:fontFamily="@font/poppinsregular"
                android:gravity="end"
                android:text="@string/distributed_on"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_distributed_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsregular"
                android:gravity="end"
                android:text="tag"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"/>




        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>